--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration=production --base-href=/",
+    "build": "ng build --configuration=production --base-href=/video-player/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
